# corre

./: CHANGELOG.md  Cargo.toml  README.md  TODO.txt  justfile  pandoc.yml
.github/workflows/: static.yml
doc/: index.html  source.md
doc/changelog/: index.html
par/: directory.html  main.md  partial.md
src/: lib.rs  main.rs
